--- a/LibDomoticPi/LibDomoticPi.vcxproj
+++ b/LibDomoticPi/LibDomoticPi.vcxproj
@@ -39,11 +39,13 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Makefile</ConfigurationType>
+    <RemoteRootDir>~/vs-remote</RemoteRootDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Makefile</ConfigurationType>
+    <RemoteRootDir>~/vs-remote</RemoteRootDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -65,10 +67,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <TargetExt>.so</TargetExt>
     <TargetName>libdomoticPi</TargetName>
-    <RemoteBuildCommandLine>cd $(Configuration); make -j4</RemoteBuildCommandLine>
-    <RemoteReBuildCommandLine>cd $(Configuration); make clean; make -j4</RemoteReBuildCommandLine>
-    <RemoteCleanCommandLine>cd $(Configuration); make clean</RemoteCleanCommandLine>
-    <RemoteBuildOutputs>$(Configuration)/libdomoticPi.so</RemoteBuildOutputs>
+    <RemoteBuildCommandLine>./compile.sh $(Configuration)</RemoteBuildCommandLine>
+    <RemoteReBuildCommandLine>./compile.sh clean $(Configuration); ./compile.sh $(Configuration)</RemoteReBuildCommandLine>
+    <RemoteCleanCommandLine>./compile.sh $(Configuration)</RemoteCleanCommandLine>
+    <RemoteBuildOutputs>$(Configuration)/libdomotic.so</RemoteBuildOutputs>
     <NMakeIncludeSearchPath>$(DevEnvDir)VC\Linux\armv8-pi\usr\local\include;$(DevEnvDir)VC\Linux\armv8-pi\usr\include;$(DevEnvDir)VC\Linux\armv8-pi\usr\include\arm-linux-gnueabihf;$(DevEnvDir)VC\Linux\armv8-pi\usr\include\arm-linux-gnueabihf\c++\6;$(DevEnvDir)VC\Linux\armv8-pi\usr\include\c++\6</NMakeIncludeSearchPath>
     <IncludePath>include;$(IncludePath)</IncludePath>
     <MultiProcNumber>4</MultiProcNumber>
@@ -77,47 +79,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <TargetExt>.so</TargetExt>
     <TargetName>libdomoticPi</TargetName>
-    <RemoteBuildCommandLine>cd $(Configuration); make -j4</RemoteBuildCommandLine>
-    <RemoteReBuildCommandLine>cd $(Configuration); make clean; make -j4</RemoteReBuildCommandLine>
-    <RemoteCleanCommandLine>cd $(Configuration); make clean</RemoteCleanCommandLine>
-    <RemoteBuildOutputs>$(Configuration)/libdomoticPi.so</RemoteBuildOutputs>
+    <RemoteBuildCommandLine>./compile.sh $(Configuration)</RemoteBuildCommandLine>
+    <RemoteReBuildCommandLine>./compile.sh clean $(Configuration); ./compile.sh $(Configuration)</RemoteReBuildCommandLine>
+    <RemoteCleanCommandLine>./compile.sh $(Configuration)</RemoteCleanCommandLine>
+    <RemoteBuildOutputs>$(Configuration)/libdomotic.so</RemoteBuildOutputs>
     <NMakeIncludeSearchPath>$(VisualStudioDir)\Projects\wiringPi\wiringPi;$(DevEnvDir)VC\Linux\armv8-pi\usr\include;$(DevEnvDir)VC\Linux\armv8-pi\usr\include\arm-linux-gnueabihf;$(DevEnvDir)VC\Linux\armv8-pi\usr\include\arm-linux-gnueabihf\c++\6;$(DevEnvDir)VC\Linux\armv8-pi\usr\include\c++\6;$(NMakeIncludeSearchPath)</NMakeIncludeSearchPath>
     <IncludePath>../include;include;$(IncludePath)</IncludePath>
     <MultiProcNumber>4</MultiProcNumber>
   </PropertyGroup>
-  <ItemGroup>
-    <ClInclude Include="include\ButtonState.h" />
-    <ClInclude Include="include\IButtonStateGenerator.h" />
-    <ClInclude Include="include\CallbackToken.h" />
-    <ClInclude Include="include\CommFactory.h" />
-    <ClInclude Include="include\DigitalButton.h" />
-    <ClInclude Include="include\DigitalSwitch.h" />
-    <ClInclude Include="include\DomoticNode.h" />
-    <ClInclude Include="include\domoticPi.h" />
-    <ClInclude Include="include\domoticPiDefine.h" />
-    <ClInclude Include="include\exceptions.h" />
-    <ClInclude Include="include\IAHKAccessory.h" />
-    <ClInclude Include="include\IComm.h" />
-    <ClInclude Include="include\IInput.h" />
-    <ClInclude Include="include\InputFactory.h" />
-    <ClInclude Include="include\IOutput.h" />
-    <ClInclude Include="include\libDomoticPi.h" />
-    <ClInclude Include="include\IModule.h" />
-    <ClInclude Include="include\MqttAwning.h" />
-    <ClInclude Include="include\MqttButton.h" />
-    <ClInclude Include="include\MqttComm.h" />
-    <ClInclude Include="include\MqttLib.h" />
-    <ClInclude Include="include\MqttSubscription.h" />
-    <ClInclude Include="include\MqttSwitch.h" />
-    <ClInclude Include="include\MqttVolume.h" />
-    <ClInclude Include="include\OutputFactory.h" />
-    <ClInclude Include="include\OutState.h" />
-    <ClInclude Include="include\Pin.h" />
-    <ClInclude Include="include\ProgrammedEvent.h" />
-    <ClInclude Include="include\SerialInterface.h" />
-    <ClInclude Include="include\Serializable.h" />
-    <ClInclude Include="include\SerialOutput.h" />
-  </ItemGroup>
   <ItemGroup>
     <None Include="json-schema\DomoticNode.json" />
     <None Include="json-schema\Input.json" />
@@ -129,33 +98,23 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="CMakeLists.txt" />
+    <CustomBuild Include="compile.sh">
+      <FileType>Document</FileType>
+    </CustomBuild>
+    <Text Include="src\CMakeLists.txt" />
+    <Text Include="src\IModule\CMakeLists.txt" />
+    <Text Include="test\CMakeLists.txt" />
+    <Text Include="test\src\CMakeLists.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="srcs\CallbackToken.cpp" />
-    <ClCompile Include="srcs\DigitalButton.cpp" />
-    <ClCompile Include="srcs\IButtonStateGenerator.cpp" />
-    <ClCompile Include="srcs\CommFactory.cpp" />
-    <ClCompile Include="srcs\DigitalSwitch.cpp" />
-    <ClCompile Include="srcs\DomoticNode.cpp" />
-    <ClCompile Include="srcs\domoticPi.cpp" />
-    <ClCompile Include="srcs\IAHKAccessory.cpp" />
-    <ClCompile Include="srcs\IComm.cpp" />
-    <ClCompile Include="srcs\IModule.cpp" />
-    <ClCompile Include="srcs\MqttAwning.cpp" />
-    <ClCompile Include="srcs\MqttButton.cpp" />
-    <ClCompile Include="srcs\MqttComm.cpp" />
-    <ClCompile Include="srcs\IInput.cpp" />
-    <ClCompile Include="srcs\InputFactory.cpp" />
-    <ClCompile Include="srcs\IOutput.cpp" />
-    <ClCompile Include="srcs\MqttLib.cpp" />
-    <ClCompile Include="srcs\MqttSubscription.cpp" />
-    <ClCompile Include="srcs\MqttSwitch.cpp" />
-    <ClCompile Include="srcs\MqttVolume.cpp" />
-    <ClCompile Include="srcs\OutputFactory.cpp" />
-    <ClCompile Include="srcs\Pin.cpp" />
-    <ClCompile Include="srcs\ProgrammedEvent.cpp" />
-    <ClCompile Include="srcs\SerialInterface.cpp" />
-    <ClCompile Include="srcs\SerialOutput.cpp" />
+    <ClInclude Include="include\IModule\IAHKAccessory.h" />
+    <ClInclude Include="include\IModule\IModule.h" />
+    <ClInclude Include="include\IModule\ModuleType.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\IModule\ModuleType.cpp" />
+    <ClCompile Include="test\src\IModule\ModuleType.cpp" />
+    <ClCompile Include="test\src\test.cpp" />
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <RemotePreBuildEvent>
@@ -167,8 +126,7 @@
       </Message>
     </RemotePreBuildEvent>
     <CustomBuildStep>
-      <Command>
-      </Command>
+      <Command>echo "Project compiled"</Command>
     </CustomBuildStep>
     <ClCompile>
       <CppAdditionalWarning>no-psabi;no-unknown-pragmas;%(CppAdditionalWarning)</CppAdditionalWarning>
